team/output/BD_1061_2436_2492/330/2/1/op.txt
  File "/home/ubuntu/test-bigdata/adminmgr/media/code/A2/python/task/BD_1061_2436_2492.py", line 2
    from operator import add
    ^
IndentationError: unexpected indent
